# NODI_Simulator

./: .gitignore  00_工程总指南.md  24_高性能预计算与增量重算方案.md  25_核心计算逻辑与公式总说明.md  26_评分复盘与现状分析.md  34_完整全波理论推导与当前模型边界.md  41_实验对齐原则与计算修正备忘.md  42_全量重算前复核结论与现行边界.md  43_Tsuyama对齐主链升级路线图与修改框架.md  AGENTS.md  EV_NODI_core_formula_chain.md  GPT_PRO_REVIEW_BUNDLE_README.md  HISTORICAL_REPORT_SUPERSESSION.md  README.md  REVIEW_BUILD_MANIFEST.json  REVIEW_PACKAGE_HASHES.sha256  REVIEW_PACKAGE_MANIFEST.json  REVIEW_PACKAGE_README.md  __init__.md  __init__.py  assay_control_matrix.py  bayesian_calibration.py  bfp_detector_operator.py  calibration_models.py  calibration_plan_advisor.py  channel_geometry_model.py  control_interpretation.py  count_generation.md  count_generation.py  count_likelihood.py  data_objects.md  data_objects.py  design_claim_governance.py  design_metrics.py  design_postprocess.py  detector_units.py  electrokinetic_transport.py  ev_integrity_risk.py  ev_population_prior.py  ev_reporting_metadata.py  (+66 more)
.streamlit/: config.toml
archive/: README.md
calibration/: bfp_roi_mask_template.json  blank_false_positive_template.csv  blank_false_positive_template_manifest.json  calibration_manifest_template.json  collection_operator_template.csv  collection_operator_template_manifest.json  raw_blank_trace_manifest_template.json  reference_blank_channel_template.csv  reference_blank_channel_template_manifest.json  standard_particle_template.csv  standard_particle_template_manifest.json
dashboard/: __init__.md  app.md  app.py  backend.md  backend.py  config.md  config.py  estimate_precompute_runtime.md  estimate_precompute_runtime.py  mie_backend.md  mie_backend.py  precompute.md  precompute.py  safe_pickle.py  signal_backend.md  signal_backend.py
docs/: DOCUMENTATION_AUDIT_2026-05-08.md  GENERATED_ARTIFACT_BOUNDARY.md  POST_V2_ENTRYPOINTS.md  PROJECT_ORGANIZATION_ROADMAP_2026-05-09.md
nodi_simulator/: __init__.py  _exports.py  assay_control_matrix.py  bayesian_calibration.py  bfp_detector_operator.py  calibration_models.py  channel_geometry_model.py  config_trace.py  control_interpretation.py  count_generation.py  count_likelihood.py  cross_section_geometry.py  data_objects.py  design_claim_governance.py  design_metrics.py  design_postprocess.py  detector_route_assembly.py  electrokinetic_transport.py  ev_integrity_risk.py  ev_reporting_metadata.py  experimental_design_advisor.py  fluidic_network_model.py  fluidic_resistance.py  illumination.py  interface_correction.py  interferometric_trace.py  intrinsic_scattering.py  materials.py  mie_engine.py  nodi_comsol_gate2_interface_contracts.py  nodi_comsol_gate3_intake.py  nodi_comsol_gate4_interop.py  nodi_comsol_next_artifacts.py  nodi_thermal_contamination.py  objective_panel.py  ood_detection.py  optical_exposure_safety.py  optical_hardware_profiles.py  optional_acceleration.py  paper_aligned_profiles.py  (+106 more)
papers/: README.md
reports/: 100_EV_NODI_P3_bounded_solver_authorization_pilot_design_plan.md  100_EV_NODI_lens_b_tau1ms_stage_b6_only_analysis.md  100_NODI_SIDEWALL_ANGLE_INTEGRATION_ROADMAP_20260629.md  101_EV_NODI_P4_bounded_solver_dry_run_preflight_plan.md  102_EV_NODI_P5_bounded_solver_authorization_gate_plan.md  103_EV_NODI_P6_minimal_bounded_solver_execution_plan.md  104_EV_NODI_P7_second_lane_authorization_design_plan.md  105_EV_NODI_P8_second_bounded_solver_lane_execution_plan.md  106_EV_NODI_P8_second_bounded_solver_lane_closure_note.md  107_EV_NODI_P9_next_bounded_lane_authorization_design_plan.md  108_EV_NODI_P10_third_bounded_solver_lane_execution_plan.md  109_EV_NODI_P10_third_bounded_solver_lane_closure_note.md  110_EV_NODI_P11_fourth_bounded_lane_authorization_design_plan.md  111_EV_NODI_P12_fourth_bounded_solver_lane_execution_plan.md  112_EV_NODI_P12_fourth_bounded_solver_lane_closure_note.md  113_EV_NODI_P13_fifth_bounded_lane_authorization_design_plan.md  114_EV_NODI_P14_fifth_bounded_solver_lane_execution_plan.md  (+571 more)
(+2843 files in other folders)
