[project]
name = "nodi-simulator"
version = "0.2.1"
description = "Semi-physical interferometric simulator for NODI nanochannel detection."
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "pandas",
  "pillow>=12.2.0",
  "plotly",
  "scipy",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pyright",
  "pytest",
  "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
  "._*",
  "archive",
  ".codex_pdf_venv",
  ".omx",
  ".pdf_output",
  ".pytest_cache",
  ".pytest_vendor",
  ".venv",
  ".venv-tests",
  "__pycache__",
  "reports",
  "results",
  "tmp",
]

[tool.ruff.lint]
select = [
  "E9",
  "F541",
  "F821",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"nodi_simulator/__init__.py" = ["F401", "F403"]
"tests/test_*.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
files = [
  "__init__.py",
  "dashboard",
  "data_objects.py",
  "illumination.py",
  "interferometric_trace.py",
  "intrinsic_scattering.py",
  "materials.py",
  "mie_engine.py",
  "nodi_simulator",
  "paper_aligned_profiles.py",
  "parameter_sweep.py",
  "pulse_analysis.py",
  "reference_field.py",
  "scattering_trace.py",
  "structured_particles.py",
  "tests",
  "tools",
  "trajectory.py",
  "tsuyama_phase_filter.py",
  "utils.py",
]
exclude = [
  "^\\._",
  "^archive/",
  "^\\.codex_pdf_venv/",
  "^\\.omx/",
  "^\\.pdf_output/",
  "^\\.pytest_cache/",
  "^\\.pytest_vendor/",
  "^\\.venv/",
  "^\\.venv-tests/",
  "^reports/",
  "^results/",
  "^tmp/",
]
ignore_missing_imports = true
ignore_errors = true
follow_imports = "silent"
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "streamlit.*",
]
ignore_missing_imports = true
