[project]
name = "nodi-simulator"
version = "0.2.1"
description = "Semi-physical interferometric simulator for NODI nanochannel detection."
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.4",
  "pandas>=3.0",
  "pillow>=12.2.0",
  "plotly>=6.6",
  "scipy>=1.17",
  "streamlit>=1.56",
]

[project.optional-dependencies]
acceleration = [
  "numba>=0.65",
]
dev = [
  "mypy>=1.20",
  "pyright>=1.1.409",
  "pytest>=9.0",
  "ruff>=0.15",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
  "._*",
  ".claude",
  "archive",
  ".codex_pdf_venv",
  ".omx",
  ".pdf_output",
  ".pytest_cache",
  ".pytest_vendor",
  ".venv",
  ".venv-tests",
  "__pycache__",
  "review_bundles",
  "reports",
  "results",
  "tmp",
]

[tool.ruff.lint]
select = [
  "E9",
  "F401",
  "F541",
  "F811",
  "F821",
  "F841",
]

[tool.ruff.lint.per-file-ignores]
"nodi_simulator/__init__.py" = ["F401", "F403"]
"tests/test_*.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
files = [
  "nodi_simulator/optional_acceleration.py",
  "nodi_simulator/realism_v2_io.py",
  "nodi_simulator/recompute_manifest.py",
  "nodi_simulator/type_coerce.py",
  "tools/_common.py",
  "tools/_legacy_entrypoint.py",
]
exclude = [
  "^\\._",
  "^\\.claude/",
  "^archive/",
  "^\\.codex_pdf_venv/",
  "^\\.omx/",
  "^\\.pdf_output/",
  "^\\.pytest_cache/",
  "^\\.pytest_vendor/",
  "^\\.venv/",
  "^\\.venv-tests/",
  "^review_bundles/",
  "^reports/",
  "^results/",
  "^tmp/",
]
ignore_missing_imports = true
follow_imports = "normal"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "nodi_simulator",
  "nodi_simulator.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "streamlit.*",
]
ignore_missing_imports = true
